# verhoeff-algo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: main.cpp
include/: verhoeff.h
src/: verhoeff.cpp
tests/: test_verhoeff.cpp
